longhorn/longhorn-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.allow-http: "false"
    ingress.kubernetes.io/auth-type: "basic"
    ingress.kubernetes.io/auth-secret: "longhorn-auth"
spec:
  tls:
  - hosts:
    - longhorn.naythanc.dev
    secretName: jc-dev-tls
  rules:
  - host: longhorn.naythanc.dev
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
